--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+ devis_directory: '%kernel.project_dir%/public/uploads/devis'
+ facture_directory: '%kernel.project_dir%/public/uploads/factures'
 services:
     # default configuration for services in *this* file
     _defaults:
