--- a/.env
+++ b/.env
@@ -37,5 +37,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=null://null
+ MAILER_DSN=gmail://homerenovations91@gmail.com:Wael%2619961992@default
+
+
+
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
