--- a/.env
+++ b/.env
@@ -37,7 +37,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://contact@homerenov91.fr:Wael&19961992@smtp.ionos.fr:587?encryption=tls&auth_mode=login
+MAILER_DSN=smtp://contact@webdev77.fr:Kolonel2017@smtp.ionos.fr:587?encryption=tls
+
+
+
+
 
 
 
