--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,21 +1,18 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
-    annotations: false
-    http_method_override: false
-    handle_all_throwables: true
+    # Enable CSRF protection for forms
+    csrf_protection: true
 
-    # Enables session support. Note that the session will ONLY be started if you read or write from it.
-    # Remove or comment this section to explicitly disable session support.
+    # Enable session management and set session lifetime (10 mins)
     session:
-        handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
+        enabled: true
+        cookie_lifetime: 600       # Lifetime in seconds (10 minutes)
+        gc_maxlifetime: 600          # Garbage collection max lifetime (10 minutes)
 
-    #esi: true
-    #fragments: true
-    php_errors:
-        log: true
+    # Optional: ESI and Fragments for advanced caching techniques
+    # esi: true
+    # fragments: true
 
 when@test:
     framework:
