--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,5 @@
 framework:
-    mailer:
-        dsn: '%env(MAILER_DSN)%'
+    messenger:
+        routing:
+            'Symfony\Component\Mailer\Messenger\SendEmailMessage': null
+
