--- a/.env
+++ b/.env
@@ -33,11 +33,19 @@ APP_SECRET=ddb4a4aadbc6720c5a677376e57f82aa
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://contact@homerenov91.fr:Wael&19961992@smtp.ionos.fr:587?encryption=tls&auth_mode=login
+MAILER_DSN=smtp://contact@homerenov91.fr:Wael19961992@smtp.ionos.fr:587?verify_peer=false
+
+
+
+
+
+
+
+
 
 
 
@@ -49,3 +57,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+MESSENGER_TRANSPORT_DSN=sync://
