--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,7 +44,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/abonne, roles: ROLE_USER }
+         - { path: ^/user, roles: ROLE_USER }
          
 
 when@test:
